# pte-parallel-programming-II-21-peg-puzzle

./: CMakeLists.txt  README.md  main.c  table.txt
